--- a/estilo2.css
+++ b/estilo2.css
@@ -81,6 +81,7 @@
     font-size: 23px;
     line-height: 27px;
     color: #FFFFFF;
+    text-align: center;
 }
 
 .caixa-respostas {
@@ -142,6 +143,7 @@
     font-size: 23px;
     line-height: 27px;
     color: #FFFFFF;
+    text-align: center;
 }
 
 .figura-feedback {
@@ -199,6 +201,7 @@
 
     .caixa-perguntas {
         width: 100%;
+        height: auto;
     }
 
     .pergunta {
