--- a/estilo2.css
+++ b/estilo2.css
@@ -15,6 +15,7 @@ s
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 
 .topo-tela2 h1 {
@@ -34,7 +35,13 @@ s
     align-items: center;
     margin-top: 69px;
     margin-bottom: 42px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.23), rgba(0, 0, 0, 0.23)), url(./imagens-tela2/potter.png);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.23), rgba(0, 0, 0, 0.23))
+}
+
+.titulo-quizz-tela2 img {
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .titulo-quizz-tela2 h1 {
@@ -44,6 +51,9 @@ s
     font-size: 39px;
     line-height: 46px;
     color: #FFFFFF;
+    position: absolute;
+    top: center;
+    right: center;
 }
 
 .caixaquizz-tela2 {
@@ -102,12 +112,19 @@ s
     width: 47%;
 }
 
-.caixa-respostas img {
+.figura {
     width: 100%;
-    height: auto;
-    margin-bottom: 5px;
+    height: 175.2px;
 }
 
+.figura img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 5px;
+}
+.resposta {
+    word-wrap: break-word;
+}
 .caixa-respostas h1 {
     font-family: 'Roboto';
     font-style: normal;
@@ -215,6 +232,10 @@ s
         line-height: 22px;
     }
 
+    .resposta {
+        word-wrap: break-word;
+    }
+    
     .caixa-respostas h1,
     .pct-acerto h1 {
         font-size: 20px;
