--- a/estilo2.css
+++ b/estilo2.css
@@ -3,17 +3,17 @@ s * {
 }
 
 .topo-tela2 {
-    width: 100%;
-    height: 69px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #EC362D;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
+  width: 100%;
+  height: 69px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ec362d;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .topo-tela2 h1 {
@@ -26,32 +26,32 @@ s * {
 }
 
 .titulo-quizz-tela2 {
-    width: 100%;
-    height: 227px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 69px;
-    margin-bottom: 42px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.23), rgba(0, 0, 0, 0.23))
+  width: 100%;
+  height: 227px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 69px;
+  margin-bottom: 42px;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.23), rgba(0, 0, 0, 0.23));
 }
 
 .titulo-quizz-tela2 img {
-    width: 100%;
-    height: 100%;
-    position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .titulo-quizz-tela2 h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 39px;
-    line-height: 46px;
-    color: #FFFFFF;
-    position: absolute;
-    top: center;
-    right: center;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 39px;
+  line-height: 46px;
+  color: #ffffff;
+  position: absolute;
+  top: center;
+  right: center;
 }
 
 .caixaquizz-tela2 {
@@ -85,13 +85,13 @@ s * {
 }
 
 .pergunta h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 23px;
-    line-height: 27px;
-    color: #FFFFFF;
-    text-align: center;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 23px;
+  line-height: 27px;
+  color: #ffffff;
+  text-align: center;
 }
 
 .caixa-respostas {
@@ -111,17 +111,17 @@ s * {
 }
 
 .figura {
-    width: 100%;
-    height: 175.2px;
+  width: 100%;
+  height: 175.2px;
 }
 
 .figura img {
-    width: 100%;
-    height: 100%;
-    margin-bottom: 5px;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 5px;
 }
 .resposta {
-    word-wrap: break-word;
+  word-wrap: break-word;
 }
 .caixa-respostas h1 {
   font-family: "Roboto";
@@ -153,13 +153,13 @@ s * {
 }
 
 .pct-acerto h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 23px;
-    line-height: 27px;
-    color: #FFFFFF;
-    text-align: center;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 23px;
+  line-height: 27px;
+  color: #ffffff;
+  text-align: center;
 }
 
 .figura-feedback {
@@ -213,10 +213,10 @@ s * {
     line-height: 22px;
   }
 
-    .caixa-perguntas {
-        width: 100%;
-        height: auto;
-    }
+  .caixa-perguntas {
+    width: 100%;
+    height: auto;
+  }
 
   .pergunta {
     height: 89px;
@@ -227,15 +227,15 @@ s * {
     line-height: 22px;
   }
 
-    .resposta {
-        word-wrap: break-word;
-    }
-    
-    .caixa-respostas h1,
-    .pct-acerto h1 {
-        font-size: 20px;
-        line-height: 23px;
-    }
+  .resposta {
+    word-wrap: break-word;
+  }
+
+  .caixa-respostas h1,
+  .pct-acerto h1 {
+    font-size: 20px;
+    line-height: 23px;
+  }
 
   .resultado-quizz {
     width: 100%;
