--- a/estilo2.css
+++ b/estilo2.css
@@ -33,6 +33,7 @@ s * {
     align-items: center;
     margin-top: 69px;
     margin-bottom: 42px;
+    opacity: 0.6; 
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.23), rgba(0, 0, 0, 0.23))
 }
 
@@ -133,6 +134,12 @@ s * {
   color: #000000;
 }
 
+.aparece-resultado {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .resultado-quizz {
   width: 759px;
   height: auto;
@@ -201,6 +208,18 @@ s * {
 }
 .escondido {
   display: none;
+}
+
+ .resposta-nao-selecionada {
+  opacity: 0.3;
+} 
+
+.resposta-correta h1{
+  color: green;
+}
+
+.resposta-incorreta h1 {
+  color:#FF4B4B;
 }
 
 @media (max-width: 1100px) {
