--- a/estilo.css
+++ b/estilo.css
@@ -19,10 +19,13 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 3;
 }
 
 .tela3 h1 {
-  margin-top: 70px;
+  margin-top: 120px;
   margin-bottom: 27px;
   font-size: 23px;
   font-weight: 700;
@@ -38,7 +41,7 @@ header {
   height: 256px;
   background-color: #ffffff;
   padding: 20px;
-  margin-bottom: 85px;
+  margin-bottom: 40px;
 }
 
 .tela3 input {
@@ -56,8 +59,7 @@ header {
 .tela3 button {
   width: 369px;
   height: 54px;
-  margin-bottom: 160px;
-  margin-top: 45px;
+  margin-bottom: 100px;
   background-color: #ec362d;
   color: #fff5f4;
   font-size: 21px;
@@ -151,10 +153,13 @@ header {
 
 .tela3-4 .imagem {
   position: relative;
+  margin-bottom: 40px;
+  overflow: hidden;
 }
 
 .tela3-4 .textoImg {
   position: absolute;
+  width: 500px;
   bottom: 17px;
   left: 17px;
   font-size: 23px;
